hphp/hack/test/typecheck/const_attribute/static/abstract/abstract_parent_concrete_class.php.shallow_decl.exp
File "abstract_parent_concrete_class.php", line 9, characters 7-7:
This class must be declared `abstract`, or provide an implementation for the abstract property `$l` (Typing[4047])
  File "abstract_parent_concrete_class.php", line 6, characters 30-31:
  Declaration is here
File "abstract_parent_concrete_class.php", line 9, characters 7-7:
This class must be declared `abstract`, or provide an implementation for the abstract property `$p` (Typing[4047])
  File "abstract_parent_concrete_class.php", line 5, characters 42-43:
  Declaration is here
